# mystic-light-browser-cinema

./: .gitignore  .releaserc.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  schema.graphql  wsl2-docker.env
.devcontainer/: Dockerfile  devcontainer.json  execute.fish  send.fish
.github/workflows/: publish-test-stub.yml  publish-test.yml  publish.yml  test.yml
chrome-extension/: .eslintrc.yml  .gitignore  .yarnrc.yml  README.md  codegen.yml  jest.config.mjs  package.json  tsconfig.json
chrome-extension/src/: api.ts  background.ts  content.ts  iframe.html  iframe.ts  mysticLightConfig.ts  storage.ts
chrome-extension/src/constants/: info.ts  mysticLight.ts
chrome-extension/src/types/: graphql.ts  message.ts  mysticLight.ts
chrome-extension/src/utils/: retry.spec.ts  retry.ts
native-app/: Cargo.toml  README.md
native-app/installer/: inno-setup.iss
native-app/src/: app.rs  config.rs  constants.rs  graphql.rs  lib.rs  log.rs  main.rs  props.rs  sdk.rs  service.rs
