[package]
name = "mystic_light_browser_cinema"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version="4.0.1", features=["log"] }
async-graphql-axum = "4.0.1"
axum = { version = "0.5.4", default-features = false }
env_logger = "0.9.0"
log = "0.4.17"
mystic_light_sdk = { version="0.4.0", features=["async-graphql"] }
portpicker = { version="0.1.1" }
serde = { version="1.0.138", features=["derive"] }
serde_json = "1.0.82"
tokio = { version="1.20.0", features=["rt-multi-thread"] }
tower-http = { version = "0.3.4", features = ["cors"] }

[features]
default = []
